compiler/tests/fail/array_expansion/x86-64/export_param.jazz
export fn main (reg u64[3] x) -> reg u64 {
  reg u64 res;
  res = x[0];
  return res;
}
